# LearningCMake

./: .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/Source/: App.hpp  CMakeLists.txt  Main.cpp
Engine/: CMakeLists.txt
Engine/Source/: CMakeLists.txt  Zenith.hpp  znpch.hpp
Engine/Source/Core/: CMakeLists.txt  Test.cpp
Engine/Source/Rendering/: CMakeLists.txt
Engine/Source/Zenith/Core/: Application.hpp  Assert.hpp  Base.hpp
